Fix FP container overflow in FF and height in IE
Improve search input alignment on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -141,7 +141,6 @@ body.search-open {
 
 .container {
   position: relative;
-  max-width: 940px;
   margin: 0 auto;
 }
 .front-page .container {
@@ -167,7 +166,6 @@ body.search-open {
   -webkit-justify-content: space-between;
   -moz-justify-content: space-between;
   justify-content: space-between;
-  max-width: 1920px;
   min-height: 100vh;
 }
 .no-flexbox .front-page .container {
@@ -178,6 +176,19 @@ body.search-open {
 }
 .container a img {
   border: none;
+}
+@media screen and (min-width: 961px) {
+  .container {
+    max-width: 940px;
+  }
+  .front-page .container {
+    max-width: 1920px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .container {
+    max-width: 100vw;
+  }
 }
 
 .wrap {
@@ -1809,6 +1820,7 @@ body.search-open {
   -moz-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  height: 100%;
 }
 .no-flexbox .sections {
   display: table-footer-group;
@@ -2133,9 +2145,9 @@ body.search-open {
   width: 140px;
   height: 30px;
   margin: 0;
-  padding: 6px 30px 5px 7px;
+  padding: 8px 30px 10px 12px;
   font-family: inherit;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1;
   color: #1B2124;
   color: rgba(27, 33, 36, 0.67);
@@ -2158,19 +2170,12 @@ body.search-open {
 .search-input::-moz-placeholder {
   text-overflow: ellipsis;
 }
-@media screen and (min-width: 961px) {
-  .front-page .search-input {
-    padding: 8px 30px 10px 12px;
-    height: 30px;
-    font-size: 12px;
-  }
-}
 @media screen and (max-width: 480px) {
   .search-input {
     width: 100%;
     height: 40px;
     font-size: 20px;
-    padding: 0 42px 0 20px;
+    padding: 0 62px 0 20px;
     background-color: #000;
     background-color: rgba(0, 0, 0, 0.1);
   }
@@ -2210,7 +2215,7 @@ body.search-open {
   .search-submit {
     width: 45px;
     height: 40px;
-    right: 7px;
+    right: 8px;
   }
 }
 
@@ -2276,6 +2281,9 @@ body.search-open {
     right: 0;
     bottom: 0;
     background-color: white;
+  }
+  .no-lang-menu .voog-search-modal {
+    left: 0;
   }
 }
 
