--- a/stylesheets/scss/_search.scss
+++ b/stylesheets/scss/_search.scss
@@ -127,9 +127,9 @@
   width: 140px;
   height: $search-height-1;
   margin: 0;
-  padding: 6px 30px 5px 7px;
+  padding: 8px 30px 10px 12px;
   font-family: inherit;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1;
   @include color($secondary-color, 0.67);
   @include bg($white);
@@ -155,20 +155,11 @@
     text-overflow: ellipsis;
   }
 
-  @include querymin($tablet-2) {
-
-    .front-page & {
-      padding: 8px 30px 10px 12px;
-      height: 30px;
-      font-size: 12px;
-    }
-  }
-
   @include query($mobile-1) {
     width: 100%;
     height: $search-height-2;
     font-size: 20px;
-    padding: 0 42px 0 20px;
+    padding: 0 62px 0 20px;
     @include bg($black, 0.1);
   }
 }
@@ -213,7 +204,7 @@
   @include query($mobile-1) {
     width: 45px;
     height: $search-height-2;
-    right: 7px;
+    right: 8px;
   }
 }
 
@@ -279,6 +270,10 @@
     right: 0;
     bottom: 0;
     @include bg($white);
+
+    .no-lang-menu & {
+      left: 0;
+    }
   }
 }
 
